<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Domeafavor</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fb_app_id">927777533913452</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="maps_intent_lat_lon_format">geo:%1$f,%2$f?q=%3$f,%4$f+(Destination)</string>
    <string name="svprogress_default">Waiting...</string>
    <string name="success">Success!</string>
    <string name="failure">Failure</string>

    <string-array name="fb_read_permissions">
        <item>public_profile</item>
        <item>user_friends</item>
        <item>user_birthday</item>
        <item>email</item>
    </string-array>
    <string name="facebook_friends_endpoint">/%1$s/friends</string>

    <!-- pragma region - Domeafavor API endpoints -->
    <string name="dmfv_host">http://52.10.123.150</string>
    <string name="dmfv_getuser_byfb">%1$s/users/facebook/%2$s</string>
    <string name="dmfv_createuser_byfb">%1$s/users/facebook</string>
    <string name="dmfv_update_location">%1$s/users/%2$s/location</string>
    <string name="dmfv_create_oddjob">/oddjobs</string>
    <string name="dmfv_modify_friend_byoid">%1$s/users/%2$s/friends</string>
    <string name="dmfv_discover_oddjobs">%1$s/discover/%2$s/oddjobs/within/%3$d?lat=%4$f&amp;lon=%5$f</string>
    <string name="dmfv_discover_friends">%1$s/discover/%2$s/users/%3$s?discardfriends=%4$s</string>
    <string name="dmfv_delegated_byme">%1$s/users/%2$s/oddjobs/delegated</string>
    <string name="dmfv_delegated_tome">$1$s/users/%2$s/oddjobs/delegatedto</string>
    <string name="dmfv_solicitor_jobs_bycompletion">%1$s/users/%2$s/oddjobs/delegated?lfinished=%3$s&amp;sfinished=%4$s</string>
    <string name="dmfv_lackey_jobs_bycompletion">%1$s/oddjobs/delegatedto/%2$s?lfinished=%3$s&amp;sfinished=%4$s</string>

    <!-- vv DNE; will be POST endpoint for messages -->
    <string name="dmfv_postmessage">%1$s/chatrooms/%2$s/message</string>
    <string name="dmfv_get_chatroom">%1$s/chatrooms/%2$s</string>

    <!-- pragma region - Error Messages -->
    <string name="errmsg_no_jobs_nearyou">No oddjobs near you.</string>


    <string name="oddjobFragmentDateCreated">Date Created:</string>
    <string name="title_activity_find_oddjob">FindOddjobActivity</string>
    <string name="fragment_oddjob_expiry_label">Expires:</string>
    <string name="fragment_oddjob_price_label">Price:</string>
    <string name="fragment_oddjob_view_location_button">View Location</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_create_oddjob">CreateOddjobActivity</string>
    

    <!-- pragma region - CreateOddjob -->
    <string name="create_oddjob_svprogress">Creating...</string>

    <!-- pragma region - SelectFriends -->
    <string name="select_friends_add_confirm_msg">Want to add %1$s as a friend?</string>
    <string name="select_friends_remove_confirm_msg">Want to remove %1$s as a friend?</string>
    <string name="select_friends_youhave_nofriends">You don\'t have any friends yet</string>

    <!-- pragma region - MonitorOddjobs -->
    <string name="monitor_oddjob_section_unassigned">Unassigned</string>
    <string name="monitor_oddjob_section_inprogress">In Progress</string>
    <string name="monitor_oddjob_section_pendingpayment">Awaiting Payment</string>
    <string name="monitor_oddjob_section_completed">Completed</string>
    <string name="monitor_oddjob_section_paymentdenied">Payment Denied</string>
    <string name="monitor_oddjob_section_expired">Expired</string>
    <string name="monitor_oddjob_no_jobs_exist">You haven\'t solicited any jobs yet</string>

    <!-- pragma region - error messages -->
    <string name="general_server_error">Problem communicating with server</string>

    <!-- pragma region - server success messages -->
    <string name="server_success">Success!</string>
    <string name="title_activity_select_friends">SelectFriendsActivity</string>
    <string name="select_friends_done_button">Done</string>

    <!-- pragma region - Intent keys -->
    <string name="intent_key_friend_ids">friend_ids</string>
    <string name="intent_key_is_discovery_mode">discovery_mode</string>

    <!-- pragma region - Querystring Params -->
    <string name="qstring_true">1</string>
    <string name="qstring_false">0</string>
    <string name="title_activity_monitor_oddjobs">MonitorOddjobsActivity</string>
    <string name="title_activity_edit_oddjob">EditOddjobActivity</string>
    <string name="hint_discover_friends">Search by username</string>

    <!--Register Strings-->
    <string name="RegisterTitle">Register</string>
    <string name="FirstNameHint">First Name</string>
    <string name="LastNameHint">Last Name</string>
    <string name="EmailHint">Email</string>
    <string name="BirthdayHint">Date of Birth "mm/dd/yyyy"</string>
    <string name="LocationCheckBox">Location Services?</string>
    <string name="SubmitText">Submit</string>
    <string name="title_activity_register">Register</string>
    <string name="UsernameHint">Username</string>
    <string name="JobTitle">Create Job</string>
    <string name="create_oddjob_usemy_location">Use my location</string>
    <string name="create_oddjob_useother_location">Or choose another</string>
    <string name="JobTitleTextHint">Job Title</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="JobDateHint">Job Date "mm/dd/yyyy"</string>
    <string name="JobDescriptionHint">Job Description</string>

</resources>
