<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.indiana.maxandblack.domeafavor.Login.RegisterFragment"
    android:rowCount="7"
    android:columnCount="1"
    android:id="@+id/gridLayout1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RegisterTitle"
        android:id="@+id/registerTitleTextView"
        android:gravity="center_horizontal"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstNameEditText"
        android:hint="@string/FirstNameHint"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastNameEditText"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"
        android:layout_row="2"
        android:hint="@string/LastNameHint"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/birthdayEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/BirthdayHint"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_marginTop="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_marginTop="8dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEditText"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"
        android:layout_row="5"
        android:hint="@string/UsernameHint"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubmitText"
        android:id="@+id/submitButton"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"
        android:layout_row="6"
        android:layout_marginTop="8dp"/>

</GridLayout>
