<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.indiana.maxandblack.domeafavor.activities.createoddjob.CreateOddjobFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/JobTitle"
        android:id="@+id/oddJobTitle"
        android:textSize="50dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jobTitleEditText"
        android:hint="@string/JobTitleTextHint"
        android:textAlignment="center"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/jobPriceEditText"
        android:hint="Job Price"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/create_oddjob_usemy_location"
            android:id="@+id/createOddjobMyLocationCheckBox"
            android:layout_weight="1"
            android:checked="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_oddjob_useother_location"
            android:id="@+id/createOddjobAnotherLocationButton"
            android:layout_weight="1"
            android:enabled="true" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Authorize Friends"
        android:id="@+id/authorizeLackeysButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel Creating"
        android:id="@+id/createOddjobCancelButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Oddjob"
        android:id="@+id/createOddjobSubmitFormButton"
        android:layout_weight="1" />

</LinearLayout>
