<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.indiana.maxandblack.domeafavor.OddjobFragment">

    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="2"
        android:rowCount="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/oddjobTitleTextView"
            android:background="@android:color/holo_orange_light"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/fragment_oddjob_expiry_label"
            android:id="@+id/oddjobExpiresLabel"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/oddjobExpiresDateTextView"
            android:layout_row="1"
            android:layout_column="1"
            android:gravity="center"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/fragment_oddjob_price_label"
            android:id="@+id/oddjobPriceLabel"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/oddjobPriceTextView"
            android:layout_row="2"
            android:layout_column="1"
            android:gravity="center"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_oddjob_view_location_button"
            android:id="@+id/oddjobViewLocationButton"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="right" />
    </GridLayout>

</FrameLayout>
